# Audio-Noder

./: .gitignore  README.md
AudioNoderC/: CMakeLists.txt  ConfigLinker.c  ConfigLinker.h  FinderLinker.c  FinderLinker.h  MainWindow.cpp  MainWindow.h  MixerFilter.c  MixerFilter.h  VirtualMic.c  VirtualMic.h  a.out  main.cpp  service.c  service.h
AudioNoderC/icons/other/: logo.xcf
